[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "5-games set of logic math games"
authors = ["Oleg Kharitonov <o_kharitonov@mail.ru>"]
readme = "README.md"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python"
]
packages = [
	{ include = "brain_games" }, 
]


[project.urls]
Repository = "https://github.com/OlegKhnew/python-project-49"


[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
